# 2023-high-performance-python

./: .gitignore  README.md  cython-empty.ipynb  cython.ipynb  intro_profiling.ipynb  numba.ipynb  numba_solutons.ipynb  schedule.md
0-numba-pi/: solution.py
01-cython-primes/: exercise.ipynb  original.py
02-cython-distrib/: .gitignore  README.md  integrate_f6.pyx  links  meson.build  pyproject.toml
03-cython-mean3filter/: exercise.ipynb
profiling/: flamegraph_example.py  mandelbrot_example.py  numerical_integration.py  test_numerical_integration.py
